--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "@windingtree/smartcontracts-hardhat-template",
-  "description": "🔧 Template for protocol contracts",
+  "name": "@windingtree/stays-contracts",
+  "description": "🛖 Stays videre implementation",
   "author": {
-    "name": "Winding Tree Developers",
-    "email": "dev@windingtree.com"
+    "name": "mfw78",
+    "email": "mfw78@protonmail.com"
   },
   "license": "GPL-3.0-only",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "homepage": "https://windingtree.com/",
   "keywords": [
     "windingtree",
-    "ethereum"
+    "ethereum",
+    "stays",
+    "waku",
+    "off-chain",
+    "marketplace"
   ],
+  "types": "typechain",
   "repository": {
     "type": "git",
-    "url": "https://github.com/windingtree/smartcontracts-hardhat-template"
+    "url": "https://github.com/windingtree/stays-contracts"
   },
   "files": [
-    "contracts/interfaces",
-    "contracts/libraries",
+    "contracts",
+    "!contracts/test",
     "artifacts/contracts/**/*.json",
-    "!artifacts/contracts/**/*.dbg.json"
+    "!artifacts/contracts/**/*.dbg.json",
+    "typechain"
   ],
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/contracts-upgradeable": "^4.5.2"
+    "@openzeppelin/contracts": "^4.6.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.0",
@@ -43,6 +47,8 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "@windingtree/videre-contracts": "^0.1.3",
+    "@windingtree/videre-sdk": "^0.3.3",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-ethers": "^0.0.1",
