--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "@windingtree/videre-contracts": "^0.1.4"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
@@ -47,8 +48,7 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "@windingtree/videre-contracts": "^0.1.3",
-    "@windingtree/videre-sdk": "^0.3.3",
+    "@windingtree/videre-sdk": "^0.3.5",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-ethers": "^0.0.1",
