refactor: 💡 typechain generation
Generates the package's own typechain for running tests that are needed
from upstream as `videre-sdk` no longer exports the typechain.

BREAKING CHANGE: 🧨 Y

--- a/package.json
+++ b/package.json
@@ -82,10 +82,12 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
+    "typechain:videre-contracts": "npx typechain --target ethers-v5 --out-dir ./typechain-videre './node_modules/@windingtree/videre-contracts/artifacts/contracts/**/*.json'",
     "compile": "hardhat compile",
     "docgen": "hardhat docgen",
     "test": "hardhat test",
     "commit": "git-cz -S",
-    "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
+    "prepublish": "yarn typechain:videre-contracts && yarn compile"
   }
 }
