--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "@windingtree/videre-contracts": "^0.2.0-alpha.1"
+    "@windingtree/videre-contracts": "^2.0.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
@@ -50,7 +50,7 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "@windingtree/videre-sdk": "^0.5.0",
+    "@windingtree/videre-sdk": "^0.7.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-ethers": "^0.0.1",
